2003-12-25  Seth Robertson  <seth@now.baka.org>

	* lib/b_strconv.c (bk_string_magnitude): Write a cute little
	routine to print a number in a magnitude-sense.  E.g. 1534 -> 1.5k
	Works in powers of 2 and 10, variable precision, and with a range of
	(-10^27+1 to 10^27-1) or (-2^90+1 to 2^90-1)

	* include/libbk.h (struct bk_relay_ioh_stats): Create statistics
	for bk_relay accounting.

	* lib/b_relay.c (bk_relay_iohhandler): Implement aforementioned
	statistics.

	* src/Makefile (LOCAL_LDS): Specify LOCAL_LDS so we know where to
	find bkssl and bkxml libraries.

	* src/bttcp.c (relay_finish): Report transfer stats in verbose mode.
	(connect_complete): Add socket buffer size/TCP nodelay options and support.
	(main): Discriminate between --local-name and --length '-l' short args.

2003-12-10  James Tanis  <jtt@pearl.sysdetect.com>

	* include/libbkxml.h (BKXML_CHECK_NEXT_NODE_NAME_CHECK_THIS_NODE):
	Resist the name police. Strike a blow for personal BAKA.

	* xml/b_search.c (bkxml_check_next_node_name): Avoid core dump from
	recent fix. [How can *nodep be uninitialized if we've already checked
	for nodep?].  Answer: because *nodep is a copy-out; unless it is also
	a copy-in, there is no requirement that the caller has initialized it.

2003-12-10  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbkxml.h (BKXML_CHECK_THIS_NODE): stop the
	BKXML_CHECK_NEXT_NODE_NAME_CHECK_THIS_NODE_NULL_NULL_SPAM_SPAM_INSANITY

	* xml/b_search.c (bkxml_check_next_node_name): if nodep is an optional
	copyout, then don't compare it to [uninitialized] node -- sez valgrind

2003-12-09  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (bk_ioh_shutdown): avoid idiocy trying to turn off reads

2003-12-08  James Tanis  <jtt@pearl.sysdetect.com>

	* xml/b_search.c (bkxml_check_next_node_name): Function to check
	the name of the next element node [replaces many uses of
	bkxml_nodesearch() while requiring "dtd correctness"]

2003-12-05  Alexander Dupuy  <dupuy@sysdetect.com>
