@@ -1,3 +1,8 @@
+2003-12-28  Seth Robertson  <seth@buscemi.sysdetect.com>
+
+	* src/bttcp.c: Raise default bttcp ioh buffer size.  Implement
+	keepalives, --file-in/out/io instead of stdio.
+
 2003-12-25  Seth Robertson  <seth@now.baka.org>
 
 	* lib/b_strconv.c (bk_string_magnitude): Write a cute little
